resource-manifests/istio/sa-virtualservice-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sa-external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      # 1
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /callback
    - uri:
        exact: /logout
    - uri:
        prefix: /static
    - uri:
        regex: '^.*\.(ico|png|jpg)$'
    route:
    - destination:
        host: sa-frontend             # 2
        port:
          number: 80
  - match:
    - uri:
        prefix: /sentiment
    route:
    - destination:
        host: sa-web-app
        port:
          number: 80
  - match:
    - uri:
        prefix: /feedback
    route:
    - destination:
        host: sa-feedback
        port:
          number: 80
  - match:
    - uri:
        prefix: /analyse/sentiment
    - headers:
        zone:
          exact: zone01
    route:
    - destination:
        host: sa-logic
        port:
          number: 5000
        subset: z1
  - match:
    - uri:
        prefix: /analyse/sentiment
    - headers:
        zone:
          exact: zone02
    route:
    - destination:
        host: sa-logic
        port:
          number: 5000
        subset: z2
  - match:
    - uri:
        prefix: /analyse/sentiment
    route:
    - destination:
        host: sa-logic
